projects/vb6parse/snapshots/tests/invalid_syntax/invalid_literals/invalid_date_month_failures.snap
---
source: projects/vb6parse/tests/invalid_syntax/invalid_literals.rs
expression: "failures.iter().map(|f| format!(\"{f:?}\")).collect::<Vec<_>>()"
---
[]
